Colaboratory を使用して作成しました

--- a/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
+++ b/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
@@ -161,9 +161,9 @@
       },
       "source": [
         "# Upload datas.zip & unzip\n",
-        "下記コードを実行すると、ファイルのアップロード フォームが出現します。datas.zipをアップロードします。\n",
+        "ファイルアップロードのフォームが開くので、datas.zipをアップロードする。\n",
         "\n",
-        "datas.zipは、/content以下にアップされます。mv コマンドで、/content/mycar/dataに移動し、解凍します。"
+        "datas.zipは、/content配下に格納された後、実際の学習用フォルダである/content/mycar/dataに移動し、解凍します。"
       ]
     },
     {
@@ -204,7 +204,7 @@
       "source": [
         "# Train your data\n",
         "\n",
-        "/content/mycar/dataのフォルダー全部を学習対象"
+        "/content/mycar/dataのフォルダー全てを学習対象にします。"
       ]
     },
     {
@@ -229,7 +229,11 @@
       },
       "source": [
         "# Copy the trained model back to Donkey Car\n",
-        "学習結果は、/content/mycar/models/mypilot.h5に保存されます。 mypilotをダブルクリックしPCにダウンロードし、SSHでRaspberryPiの~/mycar/models/mypilotにコピーします。"
+        "学習結果は、/content/mycar/models/mypilot.h5に保存される。\n",
+        "\n",
+        "「ファイル」にあるmypilot.h5をダブルクリックしPCにダウンロードする。\n",
+        "\n",
+        "WinSCP/SSHでRaspberryPiの~/mycar/models/mypilot.h5にコピーする。"
       ]
     }
   ]
