created by Colaboratory

--- a/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
+++ b/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
@@ -163,7 +163,7 @@
         "# Upload datas.zip & unzip\n",
         "「ファイル選択」でPC上にあるdatas.zipを選択し、アップロードする。\n",
         "\n",
-        "datas.zipは、/content配下に格納された後、実際の学習用フォルダである/content/mycar/dataに移動し、解凍します。"
+        "datas.zipは、実際の学習用フォルダである/content/mycar/dataに格納され、解凍します。"
       ]
     },
     {
