Colaboratory を使用して作成しました

--- a/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
+++ b/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
@@ -209,7 +209,7 @@
       },
       "source": [
         "%cd /content/mycar\n",
-        "!python manage.py train --model=/content/mycar/models/mypilot.h5 --type=imu"
+        "!python manage.py train --model=/content/mycar/models/mypilot.h5 --type=linear"
       ],
       "execution_count": 0,
       "outputs": []
