created by Colaboratory

--- a/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
+++ b/DonkeyCar_3_1_0_Training_on_Google_Colab.ipynb
@@ -50,7 +50,7 @@
       "source": [
         "# Install Tensorflow（1.13.1）\n",
         "\n",
-        "pre-installon Colab: 1.14.0\n"
+        "pre-install on Colab: 1.14.0\n"
       ]
     },
     {
@@ -80,7 +80,7 @@
         "\n",
         "cuda                   : 10.0.130\n",
         "\n",
-        "cuDNN               : 7.6.2"
+        "cuDNN               : 7.6.x"
       ]
     },
     {
